certification layout done

--- a/new-site/src/app/certificates/certificates.component.html
+++ b/new-site/src/app/certificates/certificates.component.html
@@ -16,7 +16,7 @@
 	</div>
 
 	<div class="container">
-		<div class="row" id="intro">
+		<div class="row" id="title">
 			<div class="col-md-12 offset-5">
 				<p>Deeplearning.ai</p>
 			</div>
@@ -33,7 +33,8 @@
 					<div class="card-body">
 						<h5 class="card-title">Deep Learning Specialization</h5>
 						<p class="card-text"></p>
-						<a href="https://www.coursera.org/account/accomplishments/specialization/NZ5MJC7R9W5R" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Details</a>
+						<a href="https://www.coursera.org/account/accomplishments/specialization/NZ5MJC7R9W5R" class="btn btn-primary"
+						 target="_blank" rel="noreferrer noopener">Details</a>
 					</div>
 				</div>
 				<!-- Card ends here -->
@@ -44,7 +45,8 @@
 					<div class="card-body">
 						<h5 class="card-title">Sequence Models</h5>
 						<p class="card-text"></p>
-						<a href="https://www.coursera.org/account/accomplishments/records/WFF95YRARZBH" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Details</a>
+						<a href="https://www.coursera.org/account/accomplishments/records/WFF95YRARZBH" class="btn btn-primary" target="_blank"
+						 rel="noreferrer noopener">Details</a>
 					</div>
 				</div>
 				<!-- Card ends here -->
@@ -59,7 +61,8 @@
 					<div class="card-body">
 						<h5 class="card-title">Convolutional Neural Networks</h5>
 						<p class="card-text"></p>
-						<a href="https://www.coursera.org/account/accomplishments/records/MKVMRRMPWSQH" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Details</a>
+						<a href="https://www.coursera.org/account/accomplishments/records/MKVMRRMPWSQH" class="btn btn-primary" target="_blank"
+						 rel="noreferrer noopener">Details</a>
 					</div>
 				</div>
 				<!-- Card ends here -->
@@ -70,7 +73,8 @@
 					<div class="card-body">
 						<h5 class="card-title">Improving Deep Neural Networks</h5>
 						<p class="card-text"></p>
-						<a href="https://www.coursera.org/account/accomplishments/records/95E3CJ2VBCZU" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Details</a>
+						<a href="https://www.coursera.org/account/accomplishments/records/95E3CJ2VBCZU" class="btn btn-primary" target="_blank"
+						 rel="noreferrer noopener">Details</a>
 					</div>
 				</div>
 				<!-- Card ends here -->
@@ -78,30 +82,168 @@
 		</div>
 
 		<div class="row">
-				<div class="card-deck">
-					<!-- Card starts here -->
-					<div class="card">
-						<img class="card-img-top" src="../../assets/certificates/3.jpg" alt="Card image cap">
-						<div class="card-body">
-							<h5 class="card-title">Structuring Machine Learning Projects</h5>
-							<p class="card-text"></p>
-							<a href="https://www.coursera.org/account/accomplishments/records/Y4XMSPEX7447" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Details</a>
-						</div>
+			<div class="card-deck">
+				<!-- Card starts here -->
+				<div class="card">
+					<img class="card-img-top" src="../../assets/certificates/3.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Structuring Machine Learning Projects</h5>
+						<p class="card-text"></p>
+						<a href="https://www.coursera.org/account/accomplishments/records/Y4XMSPEX7447" class="btn btn-primary" target="_blank"
+						 rel="noreferrer noopener">Details</a>
 					</div>
-					<!-- Card ends here -->
-	
+				</div>
+				<!-- Card ends here -->
+
+				<!-- Card starts here -->
+				<div class="card">
+					<img class="card-img-top" src="../../assets/certificates/6.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Neural Networks and Deep Learning</h5>
+						<p class="card-text"></p>
+						<a href="https://www.coursera.org/account/accomplishments/records/74TSGWGRDZ62" class="btn btn-primary" target="_blank"
+						 rel="noreferrer noopener">Details</a>
+					</div>
+				</div>
+				<!-- Card ends here -->
+			</div>
+		</div>
+	</div>
+	<!-- Certificate cards end here -->
+	<!-- Deeplearning.ai ends here -->
+
+
+	<br>
+	<hr>
+	<br>
+
+
+	<!-- Imperial College London certificates -->
+	<div class="container">
+		<div class="row" id="title">
+			<div class="col-md-12 offset-4">
+				<p>Imperial College London</p>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="card-deck">
+				<!-- Card starts here -->
+				<div class="card">
+					<img class="card-img-top" src="../../assets/certificates/13.JPG" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Mathematics for Machine Learning</h5>
+						<p class="card-text"></p>
+						<a href="https://www.coursera.org/account/accomplishments/specialization/BYEPZAD2XGZP" class="btn btn-primary"
+						 target="_blank" rel="noreferrer noopener">Details</a>
+					</div>
+				</div>
+				<!-- Card ends here -->
+
+				<!-- Card starts here -->
+				<div class="card">
+					<img class="card-img-top" src="../../assets/certificates/11.JPG" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Mathematics for Machine Learning: Linear Algebra</h5>
+						<p class="card-text"></p>
+						<a href="https://www.coursera.org/account/accomplishments/records/MFQKM8UGFGF4" class="btn btn-primary" target="_blank"
+						 rel="noreferrer noopener">Details</a>
+					</div>
+				</div>
+				<!-- Card ends here -->
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="card-deck">
+				<!-- Card starts here -->
+				<div class="card">
+					<img class="card-img-top" src="../../assets/certificates/12.JPG" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Mathematics for Machine Learning: Multivariate Calculus</h5>
+						<p class="card-text"></p>
+						<a href="https://www.coursera.org/account/accomplishments/records/BUWK94REE4D8" class="btn btn-primary" target="_blank"
+						 rel="noreferrer noopener">Details</a>
+					</div>
+				</div>
+				<!-- Card ends here -->
+
+				<!-- Card starts here -->
+				<div class="card">
+					<img class="card-img-top" src="../../assets/certificates/10.JPG" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Mathematics for Machine Learning: PCA</h5>
+						<p class="card-text"></p>
+						<a href="https://www.coursera.org/account/accomplishments/records/8PRXNGT3H7X5" class="btn btn-primary" target="_blank"
+						 rel="noreferrer noopener">Details</a>
+					</div>
+				</div>
+				<!-- Card ends here -->
+			</div>
+		</div>
+	</div>
+
+
+	<br>
+	<hr>
+	<br>
+
+
+	<!-- Stanford certificates -->
+	<div class="container">
+		<div class="row" id="title">
+			<div class="col-md-12 offset-3">
+				<p>Stanford University</p>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="card-deck">
+				<!-- Card starts here -->
+				<div class="card">
+					<img class="card-img-top" src="../../assets/certificates/7.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Machine Learning</h5>
+						<p class="card-text"></p>
+						<a href="https://www.coursera.org/account/accomplishments/records/JVQWVB78U9VS" class="btn btn-primary"
+						 target="_blank" rel="noreferrer noopener">Details</a>
+					</div>
+				</div>
+				<!-- Card ends here -->
+			</div>
+		</div>
+	</div>
+
+
+	<br>
+	<hr>
+	<br>
+
+	<!-- IIT bombay certificates -->
+	<div class="container">
+			<div class="row" id="title">
+				<div class="col-md-12 offset-3">
+					<p>IIT Bombay</p>
+				</div>
+			</div>
+		</div>
+		<div class="container" id="single">
+			<div class="row">
+				<div class="card-deck" >
 					<!-- Card starts here -->
-					<div class="card">
-						<img class="card-img-top" src="../../assets/certificates/6.jpg" alt="Card image cap">
+					<div class="card" id="single_img">
+						<img class="card-img-top" src="../../assets/certificates/8.jpg" alt="Card image cap">
 						<div class="card-body">
-							<h5 class="card-title">Neural Networks and Deep Learning</h5>
+							<h5 class="card-title">CS101.1xA15: Introduction to Computer Programming</h5>
 							<p class="card-text"></p>
-							<a href="https://www.coursera.org/account/accomplishments/records/74TSGWGRDZ62" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Details</a>
+							<a href="https://verify.iitbombayx.in/cert/450747c6166c42c49c9804f72d174e4f" class="btn btn-primary"
+							 target="_blank" rel="noreferrer noopener">Details</a>
 						</div>
 					</div>
 					<!-- Card ends here -->
 				</div>
 			</div>
-	</div>
-	<!-- Certificate cards end here -->
+		</div>
 </div>
