css adjustments made

--- a/new-site/src/app/certificates/certificates.component.html
+++ b/new-site/src/app/certificates/certificates.component.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="row" id="intro">
 			<div class="col-md-12 offset-3">
-				<p>Here are a some of the MOOCs that I have completed</p>
+				<p>Here are some of the MOOCs that I have completed</p>
 			</div>
 		</div>
 	</div>
