--- a/new-site/src/app/app.component.html
+++ b/new-site/src/app/app.component.html
@@ -31,7 +31,7 @@
                 <a class="nav-item nav-link" routerLink="/skills"> Skills </a>
                 <a class="nav-item nav-link" routerLink="/experience"> Experience </a>
                 <a class="nav-item nav-link" routerLink="/projects"> Projects </a>
-                <a class="nav-item nav-link" routerLink="/certificates"> Certifications </a>
+                <a class="nav-item nav-link" routerLink="/certifications"> Certifications </a>
             </div>
         </div>
     </nav>
