--- a/new-site/src/app/homepage/homepage.component.html
+++ b/new-site/src/app/homepage/homepage.component.html
@@ -18,5 +18,13 @@
 	<div class="row">
 		<app-projects></app-projects>
 	</div>
-	
+
+	<br><hr><br>
+	<div class="container" id="footer-data">
+		<div class="row">
+			<div class="col-md-12 offset-5">
+				<p>Click here for <a href="/certifications">certifications</a></p>
+			</div>
+		</div>
+	</div>
 </div>
