--- a/new-site/src/app/homepage/homepage.component.html
+++ b/new-site/src/app/homepage/homepage.component.html
@@ -23,7 +23,7 @@
 	<div class="container" id="footer-data">
 		<div class="row">
 			<div class="col-md-12 offset-5">
-				<p>Click here for <a href="/certifications">certifications</a></p>
+				<p>Click here for <a routerLink="/certifications">certifications</a></p>
 			</div>
 		</div>
 	</div>
