--- a/new-site/src/app/not-found/not-found.component.html
+++ b/new-site/src/app/not-found/not-found.component.html
@@ -1,3 +1,7 @@
-<p>
-  not-found works!
-</p>
+<div class="jumbotron">
+	<div class="container">
+		<h1 class="display-4">Error 404</h1>
+		<p class="lead">Sorry, but I don't have anything for the URL you have typed. Please check the URL or use the navigation links.</p>
+
+	</div>
+</div>
