--- a/new-site/src/app/homepage/projects/projects.component.css
+++ b/new-site/src/app/homepage/projects/projects.component.css
@@ -20,3 +20,9 @@
     color:red;
     font-weight: 500;
 }
+
+@media only screen and (max-width: 768px) and (min-width: 571px){
+   .btn {
+        padding: 0%;
+   }
+}
