--- a/new-site/src/app/homepage/experience/experience.component.css
+++ b/new-site/src/app/homepage/experience/experience.component.css
@@ -18,12 +18,6 @@ a.float-right{
     font-weight: 500;
 }
 
-@media only screen and (max-width: 991px) {
-    .timeline p{
-        float: left;
-    }  
-}
-
 h4{
     color: rgb(0, 102, 0);
     font-weight: 700;
@@ -52,9 +46,10 @@ ul.timeline > li:before {
     background: white;
     display: inline-block;
     position: absolute;
-    border-radius: 50%;
-    border: 3px solid rgb(77, 184, 255);
+    border-radius: 0%;
+    border: 7px solid rgb(77, 184, 255);
     left: 20px;
+    margin-top: 5px;
     width: 20px;
     height: 20px;
     z-index: 400;
