--- a/new-site/src/app/homepage/homepage.component.html
+++ b/new-site/src/app/homepage/homepage.component.html
@@ -22,8 +22,8 @@
 	<br><hr><br>
 	<div class="container" id="footer-data">
 		<div class="row">
-			<div class="col-md-12 offset-5">
-				<p>Click here for <a routerLink="/certifications">certifications</a></p>
+			<div class="col-md-12 offset-5" id="footer-text">
+				Click here for <a routerLink="/certifications">certifications</a>
 			</div>
 		</div>
 	</div>
