--- a/new-site/src/app/homepage/homepage.component.css
+++ b/new-site/src/app/homepage/homepage.component.css
@@ -6,3 +6,11 @@
 #footer-data a{
     color:red;
 }
+
+#footer-text{
+    background-color: rgb(53, 49, 47);
+    margin: 0%;
+    padding-right: 20px;
+    color: white;
+}
+
