titles adjusted for smaller screens

--- a/new-site/src/app/certificates/certificates.component.html
+++ b/new-site/src/app/certificates/certificates.component.html
@@ -17,8 +17,8 @@
 
 	<div class="container">
 		<div class="row" id="title">
-			<div class="col-md-12 offset-5">
-				<p>Deeplearning.ai</p>
+			<div class="col-md-12 offset-0">
+				<p>deeplearning.ai</p>
 			</div>
 		</div>
 	</div>
@@ -121,7 +121,7 @@
 	<!-- Imperial College London certificates -->
 	<div class="container">
 		<div class="row" id="title">
-			<div class="col-md-12 offset-4">
+			<div class="col-md-12 offset-0">
 				<p>Imperial College London</p>
 			</div>
 		</div>
@@ -193,7 +193,7 @@
 	<!-- Stanford certificates -->
 	<div class="container">
 		<div class="row" id="title">
-			<div class="col-md-12 offset-3">
+			<div class="col-md-12 offset-0">
 				<p>Stanford University</p>
 			</div>
 		</div>
@@ -224,7 +224,7 @@
 	<!-- IIT bombay certificates -->
 	<div class="container">
 			<div class="row" id="title">
-				<div class="col-md-12 offset-3">
+				<div class="col-md-12 offset-0">
 					<p>IIT Bombay</p>
 				</div>
 			</div>
