navbar is now always on top

--- a/new-site/src/app/app.component.html
+++ b/new-site/src/app/app.component.html
@@ -18,7 +18,7 @@
 <body>
 
     <!-- Navigation Bar starts here -->
-    <nav class="navbar navbar-dark bg-dark justify-content-center navbar-expand-lg">
+    <nav class="navbar navbar-dark bg-dark sticky-top justify-content-center navbar-expand-lg">
         <a class="navbar-brand" routerLink="homepage"> SUSANTA </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDiv"
