--- a/new-site/src/app/homepage/homepage.component.css
+++ b/new-site/src/app/homepage/homepage.component.css
@@ -7,10 +7,13 @@
     color:red;
 }
 
+
 #footer-text{
     background-color: rgb(53, 49, 47);
     margin: 0%;
     padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     color: white;
 }
 
